--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -193,11 +190,10 @@
                     <!-- Card 1 -->
                     <div class="col-md-4">
                         <div class="card sheero-card mb-4">
-                            <img src="images/Dog1.png" class="card-img-top" alt="dog1">
+                            <img src="images/Dog4.png" class="card-img-top" alt="dog1">
                             <div class="card-body">
-                                <h5 class="card-title">Sheero’s Adventure</h5>
-                                <p class="card-text">Join Sheero on his exciting adventure filled with fun and
-                                    surprises.</p>
+                                <h5 class="card-title">Ghibli Sheero</h5>
+                                <p class="card-text"> Who says Ghibli magic is only for humans? Sheero’s following the trend, with a tail full of whimsy and paws full of adventure.</p>
                                 <a href="#" class="btn btn-primary">Learn More</a>
                             </div>
                         </div>
@@ -253,57 +249,92 @@
         </div>
 
 
-        <!-- Carousel Section -->
-        <div id="carousel" class="row mt-5">
-            <div class="col">
-                <h2>5. Image Slider</h2>
-                <hr>
-                <div id="carouselExample" class="carousel slide">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="images/Dog1.png" class="d-block w-100" alt="dog1">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Sheero in Action</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Dog2.jpg" class="d-block w-100" alt="dog2">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Training Time</h5>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Dog3.png" class="d-block w-100" alt="dog3">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Nap Time with Sheero</h5>
-                            </div>
+       <!-- Image Slider and Sheero's Stories Section -->
+<div class="container mt-5">
+    <div class="row">
+        <!-- Left Section: Image Slider -->
+        <div class="col-md-6">
+            <h2>Sheero's Image Slider</h2>
+            <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/DogA.png" class="d-block w-100" alt="dog1">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Sheero loves cats</h5>
                         </div>
                     </div>
-
-                    <!-- Pagination Dots -->
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
+                    <div class="carousel-item">
+                        <img src="images/DogB.png" class="d-block w-100" alt="dog2">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Play Time</h5>
+                        </div>
                     </div>
-
-                    <!-- Carousel Controls -->
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                    <div class="carousel-item">
+                        <img src="images/DogC.png" class="d-block w-100" alt="dog3">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Nap Time with Sheero</h5>
+                        </div>
+                    </div>
                 </div>
+                <!-- Carousel Controls -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
         </div>
+
+        <!-- Right Section: Sheero's Stories as a Carousel -->
+        <div class="col-md-6">
+            <h2>Stories About Sheero</h2>
+            <div id="storiesCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <!-- Story 1 -->
+                    <div class="carousel-item active">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Grandma’s Little Shadow</h5>
+                                <p class="card-text">Sheero is absolutely obsessed with his grandma. He’s her loyal sidekick, following her from room to room like a furry little shadow. But his favorite spot? Sitting beside her while she cooks, hoping to snag some veggies off the chopping board! 🍅🥕</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Story 2 -->
+                    <div class="carousel-item">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Birthday Party Besties</h5>
+                                <p class="card-text">Meet Leo, Sheero’s neighbor and BFF! These two are inseparable and celebrate their birthdays together every year. Cake, toys, and lots of tail wagging—Sheero and Leo know how to throw a birthday bash! 🎉🐾</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Story 3 -->
+                    <div class="carousel-item">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">Monthly Spa Day</h5>
+                                <p class="card-text">Once a month, Sheero gets pampered like the superstar he is! Shyam Uncle rolls up in his van, and Sheero hops right in, ready for a relaxing day of grooming and spa treatments. He's living his best life! 💅🚗</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Carousel Controls -->
+                <button class="carousel-control-prev" type="button" data-bs-target="#storiesCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#storiesCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
         <!-- Footer -->
@@ -319,3 +350,4 @@
 </body>
 
 </html>
+
